--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -7,9 +7,9 @@ smtp:
 
 AWS:
   S3:
-    bucket: projectname-production
-    access_key_id: XXXXXXXXXXXXXXXX
-    secret_access_key: YYYYYYYYYYYYYYYYYY
-    aws_url: http://projectname-production.s3.amazonaws.com/
-    aws_raw_url: projectname-production.s3.amazonaws.com
+    bucket: eg-production
+    access_key_id: <%= ENV['aws_access_key_id'] %>
+    secret_access_key: <%= ENV['aws_secret_access_key'] %>
+    aws_url: http://eg-production.s3.amazonaws.com/
+    aws_raw_url: eg-production.s3.amazonaws.com
     end_point: s3-eu-west-1.amazonaws.com
